2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-parse-context): Add defclass.

2010-03-09  Helmut Eller  <heller@common-lisp.net>

	Some more fixes for Allegro

	* swank-allegro.lisp (function-source-location): Use
	xref::object-to-function-name which seems to work better for some
	cases.
	(fspec-definition-locations): For :top-level-forms return a list
	of ((fspec loc)) not just (fspec loc).  Also deal with the file
	vs. buffer issue.
	(ldb-code-to-src-loc): Don't use *temp-file-map* before it is
	declared.
	(pc-source-location): Be a bit more fuzzy when searching the
	code-location for a pc.

2010-03-08  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-extract-context): Add defvar and defparameter.

2010-03-08  Helmut Eller  <heller@common-lisp.net>

	Fix some of the brokeness in the last change.

	* swank-allegro.lisp (frame-source-location): Deal with frames for
	undefined functions better.
	(ldb-code-to-src-loc): Handle temp-files properly.

2010-03-08  Helmut Eller  <heller@common-lisp.net>

	Try to use source-level debugging features in Allegro 8.2

	* swank-allegro.lisp (disassemble-frame): Use undocumented
	debugger::dyn-fd-analyze to figure out the PC and display it.
	(pc-source-location, ldb-code-to-src-loc, longest-common-prefix)
	(source-paths-of): New functions.
	(frame-source-location): Use pc-source-location.  Still far from
	optimal since Allegro rarely records source regions and anonymous
	functions don't seem to carry source level debug-info at all.
	(*temp-file-map*, buffer-or-file-location, find-fspec-location):
	Use a table to map temp-file names back to Emacs buffers instead
	of putting an eval-when-compile form in the source.  The
	eval-when-compile form messed up source positions.
	(*temp-file-header-end-position*, find-definition-in-buffer):
	Deleted.
	(compile-from-temp-file): Bind excl:*load-source-debug-info* and
	compiler:save-source-level-debug-info-switch so that Allegro